<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_trending"
        android:icon="@drawable/ic_baseline_trending_up_24"
        android:title="@string/trending" />

    <item
        android:id="@+id/navigation_post"
        android:title=""
        android:visible="true" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/person"
        android:title="@string/profile" />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/settings"
        android:title="@string/settings" />
</menu>