<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/margin_10"
    android:layout_marginEnd="@dimen/margin_10"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivClosePostNewsOptionsDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:paddingTop="@dimen/margin_10"
        android:paddingEnd="@dimen/margin_10"
        android:src="@drawable/close" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/news_post" />

    <LinearLayout
        android:id="@+id/layoutPostImage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_40"
        android:layout_marginTop="@dimen/margin_10"
        android:background="@drawable/post_news_dialog_item_bg"
        android:orientation="vertical">

        <TextView
            style="@style/RegularCondensed"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:autoSizeTextType="none"
            android:gravity="center"
            android:text="@string/post_news_with_image"
            android:textColor="@color/white"
            android:textSize="@dimen/text_18" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutPostVideo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_40"
        android:layout_marginTop="@dimen/margin_10"
        android:background="@drawable/post_news_dialog_item_bg"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            style="@style/RegularCondensed"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:autoSizeTextType="none"
            android:gravity="center"
            android:text="@string/post_news_with_video"
            android:textColor="@color/white"
            android:textSize="@dimen/text_18" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutPostSocialLinks"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_40"
        android:layout_marginTop="@dimen/margin_10"
        android:background="@drawable/post_news_dialog_item_bg"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            style="@style/RegularCondensed"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:autoSizeTextType="none"
            android:gravity="center"
            android:text="@string/post_news_with_social_links"
            android:textColor="@color/white"
            android:textSize="@dimen/text_18" />

    </LinearLayout>

    <TextView
        android:id="@+id/txtOne"
        style="@style/Regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_10"
        android:autoSizeTextType="none"
        android:gravity="start"
        android:includeFontPadding="false"
        android:lineSpacingExtra="-8dp"
        android:text="@string/news_reporter_1"
        android:textColor="@color/black"
        android:textSize="@dimen/text_16" />

    <TextView
        android:id="@+id/txtTwo"
        style="@style/Regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_5"
        android:autoSizeTextType="none"
        android:gravity="start"
        android:includeFontPadding="false"
        android:lineSpacingExtra="-8dp"
        android:text="@string/news_reporter_2"
        android:textColor="@color/black"
        android:textSize="@dimen/text_16" />

    <TextView
        android:id="@+id/txtThree"
        style="@style/Regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_5"
        android:autoSizeTextType="none"
        android:gravity="start"
        android:includeFontPadding="false"
        android:lineSpacingExtra="-8dp"
        android:text="@string/news_reporter_3"
        android:textColor="@color/black"
        android:textSize="@dimen/text_16" />

    <TextView
        android:id="@+id/txtFour"
        style="@style/Regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_5"
        android:autoSizeTextType="none"
        android:gravity="start"
        android:includeFontPadding="false"
        android:lineSpacingExtra="-8dp"
        android:text="@string/news_reporter_4"
        android:textColor="@color/black"
        android:textSize="@dimen/text_16" />

</LinearLayout>