<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        style="@style/RegularCondensed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/appColor"
        android:gravity="center"
        android:paddingTop="@dimen/margin_5"
        android:paddingBottom="@dimen/margin_5"
        android:text="@string/log_out"
        android:textColor="@color/white"
        android:textSize="@dimen/text_20" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin_20">

        <TextView
            style="@style/Regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/logout_confirmation"
            android:textColor="@color/black"
            android:textSize="@dimen/text_18" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_30"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtLoginClose"
                style="@style/RegularCondensed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/no"
                android:textAllCaps="true"
                android:textColor="@color/red"
                android:textSize="@dimen/text_16" />

            <TextView
                android:id="@+id/txtLogin"
                style="@style/RegularCondensed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/yes"
                android:textAllCaps="true"
                android:textColor="@color/appColor"
                android:textSize="@dimen/text_16" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>