<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".Activities.HelpandSupportActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_50"
        android:background="@color/appColor"
        android:orientation="horizontal"
        android:paddingStart="@dimen/margin_5"
        android:paddingEnd="@dimen/margin_5">

        <ImageView
            android:id="@+id/ivBackSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/left_arrow" />

        <TextView
            android:id="@+id/txtGeneralSettingsName"
            style="@style/Regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/help_support"
            android:textColor="@color/white"
            android:textSize="@dimen/text_18" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_10"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            app:cardCornerRadius="@dimen/margin_5"
            app:cardElevation="@dimen/margin_5"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/margin_5">

                <TextView
                    style="@style/RegularCondensed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mail"
                    android:textColor="@color/appColor"
                    android:textSize="@dimen/text_18" />

                <EditText
                    android:id="@+id/etMail"
                    style="@style/Regular"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_60"
                    android:layout_marginTop="@dimen/margin_10"
                    android:layout_marginBottom="@dimen/margin_5"
                    android:background="@drawable/post_news_edit_text_bg"
                    android:gravity="start"
                    android:hint="@string/mail"
                    android:inputType="textMultiLine|text"
                    android:maxLength="75"
                    android:maxLines="2"
                    android:padding="@dimen/margin_5"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_15" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/margin_5"
            app:cardElevation="@dimen/margin_5"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/margin_5">

                <TextView
                    style="@style/RegularCondensed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/subject"
                    android:textColor="@color/appColor"
                    android:textSize="@dimen/text_18" />

                <EditText
                    android:id="@+id/etSubject"
                    style="@style/Regular"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_70"
                    android:layout_marginTop="@dimen/margin_10"
                    android:layout_marginBottom="@dimen/margin_5"
                    android:background="@drawable/post_news_edit_text_bg"
                    android:gravity="start"
                    android:hint="@string/subject"
                    android:inputType="textMultiLine|text"
                    android:maxLines="2"
                    android:padding="@dimen/margin_5"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_15" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/margin_5"
            app:cardElevation="@dimen/margin_5"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/margin_5">

                <TextView
                    style="@style/RegularCondensed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textColor="@color/appColor"
                    android:textSize="@dimen/text_18" />


                <EditText
                    android:id="@+id/etDescription"
                    style="@style/Regular"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_150"
                    android:layout_marginTop="@dimen/margin_10"
                    android:layout_marginBottom="@dimen/margin_5"
                    android:background="@drawable/post_news_edit_text_bg"
                    android:gravity="start"
                    android:hint="@string/description"
                    android:inputType="textMultiLine|text"
                    android:maxLength="150"
                    android:padding="@dimen/margin_5"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_15" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <TextView
        android:id="@+id/txtSubmitQuery"
        style="@style/RegularCondensed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_30"
        android:background="@drawable/login_btn_bg"
        android:gravity="start"
        android:paddingStart="@dimen/margin_50"
        android:paddingTop="@dimen/margin_5"
        android:paddingEnd="@dimen/margin_50"
        android:paddingBottom="@dimen/margin_5"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="@dimen/text_20" />

</LinearLayout>